--- a/src/style.css
+++ b/src/style.css
@@ -7,17 +7,17 @@ body {
   }
 
   .todoParentContainer {
-    position: relative;
     width :100%;
     height: 100vh;
     background-color: lightgreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .todoChildContainer {
-    position: absolute;
     width :350px;
-    margin-left: 45%;
-    margin-top: 25vh;
+    height: auto;
     text-align: center;
   }
 
